--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   <a href="index.html" class="nav-item nav-link active"
                     >Beranda</a
                   >
-                  <a href="#about" class="nav-item nav-link">Tentang</a>
+                  <a href="#about" class="nav-item nav-link">Informasi</a>
                 </div>
               </div>
             </nav>
@@ -137,7 +137,7 @@
                   <h6
                     class="section-title text-center text-primary text-uppercase"
                   >
-                    PT. VALE INDONESIA
+                    PT. VALE INDONESIA Tbk
                   </h6>
                   <h2 class="display-5 text-white animated slideInDown">
                     JALUR EVAKUASI EMERGENCY
@@ -168,7 +168,7 @@
           <div class="row g-5 align-items-center">
             <div class="col-lg-6">
               <h6 class="section-title text-start text-primary text-uppercase">
-                About Us
+                Informasi
               </h6>
               <h1 class="mb-4">
                 Jalur Evakuasi Emergensi
@@ -240,7 +240,7 @@
 
       <!-- Footer Start -->
       <div
-        class="container-fluid bg-dark text-light footer wow fadeIn"
+        class="container-fluid bg-primary text-light footer wow fadeIn"
         data-wow-delay="0.1s"
       >
         <div class="container pb-3">
@@ -261,7 +261,7 @@
       <!-- Footer End -->
 
       <!-- Back to Top -->
-      <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
+      <a href="#" class="btn btn-lg btn-dark btn-lg-square back-to-top"
         ><i class="bi bi-arrow-up"></i
       ></a>
     </div>
