--- a/map.html
+++ b/map.html
@@ -122,7 +122,7 @@
                 <a href="index.html" class="nav-item nav-link active"
                   >Beranda</a
                 >
-                <a href="about.html" class="nav-item nav-link">Tentang</a>
+                <a href="index.html#about" class="nav-item nav-link">Tentang</a>
               </div>
             </div>
           </nav>
@@ -130,11 +130,6 @@
       </div>
     </div>
     <div id="map"></div>
-    <a
-      href="index.html"
-      class="btn btn-lg btn-primary btn-lg-square back-to-previous"
-      ><i class="bi bi-arrow-left"></i
-    ></a>
     <script
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
