--- a/emp.html
+++ b/emp.html
@@ -45,7 +45,7 @@
   </head>
   <body>
     <!-- header start -->
-    <div class="container-fluid bg-dark px-0">
+    <div class="container-fluid bg-dark px-0 fixed-top">
       <div class="row gx-0">
         <div class="col-lg-3 bg-dark d-none d-lg-block">
           <a
@@ -92,9 +92,7 @@
               id="navbarCollapse"
             >
               <div class="navbar-nav mr-auto py-0">
-                <a href="index.html" class="nav-item nav-link active"
-                  >Beranda</a
-                >
+                <a href="index.html" class="nav-item nav-link">Beranda</a>
                 <a href="index.html#about" class="nav-item nav-link">Tentang</a>
               </div>
             </div>
@@ -104,7 +102,7 @@
     </div>
     <!-- Header End -->
 
-    <div class="container-xxl py-5">
+    <div class="container-xxl" id="rute">
       <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
           <h6 class="section-title text-center text-primary text-uppercase">
