--- a/map.html
+++ b/map.html
@@ -119,9 +119,7 @@
               id="navbarCollapse"
             >
               <div class="navbar-nav mr-auto py-0">
-                <a href="index.html" class="nav-item nav-link active"
-                  >Beranda</a
-                >
+                <a href="index.html" class="nav-item nav-link">Beranda</a>
                 <a href="index.html#about" class="nav-item nav-link">Tentang</a>
               </div>
             </div>
