--- a/map.html
+++ b/map.html
@@ -120,7 +120,9 @@
             >
               <div class="navbar-nav mr-auto py-0">
                 <a href="index.html" class="nav-item nav-link">Beranda</a>
-                <a href="index.html#about" class="nav-item nav-link">Tentang</a>
+                <a href="index.html#about" class="nav-item nav-link"
+                  >Informasi</a
+                >
               </div>
             </div>
           </nav>
