--- a/map.html
+++ b/map.html
@@ -155,7 +155,7 @@
       const map = L.map("map", {
         center: [-2.565095, 121.38173],
         zoom: 13,
-        layers: [Maps],
+        layers: [Satellite],
       });
 
       const baseLayers = {
