--- a/emp.html
+++ b/emp.html
@@ -171,7 +171,7 @@
               <div class="card-body">
                 <h5 class="card-title text-center py-2">${data[j].Label}</h5>
                 <div class="text-center">
-                  <a class="btn btn-primary text-center submit" href="${data[j].Link}"">Lihat Rute</a>
+                  <a class="btn btn-primary text-center submit" href="${data[j].Link}" target="_blank">Lihat Rute</a>
                 </div>
               </div>
             </div>
