--- a/index.html
+++ b/index.html
@@ -178,9 +178,10 @@
                 <span class="text-primary text-uppercase">VALE</span>
               </h1>
               <p class="mb-4">
-                Jalur evakuasi emergensi adalah jalur atau rute yang mempermudah
-                mengetahui jalan yang efesien untuk dilewati menuju lokasi
-                emergens pada lokasi tambang PT.Vale Indonesia.”
+                Jalur evakuasi adalah jalur yang bertujuan menghubungkan semua area aman atau yang biasa disebut titik kumpul EMP
+                (Emergency Meeting Point). Jalur evakuasi merupakan standar penting pada penerapan K3 atau Keselamatan dan 
+                Kesehatan Kerja. Jalur evakuasi penting dalam mengetahui jalan yang efesien menuju EMP pada seluruh lokasi 
+                tambang PT.Vale Indonesia Tbk.
               </p>
               <div class="row g-3 pb-4">
                 <div class="col-sm-4 wow fadeIn" data-wow-delay="0.3s">
