--- a/map.html
+++ b/map.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Demo: Add custom markers in Mapbox GL JS</title>
+    <title>Jalur Evakuasi Vale</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Icon Font Stylesheet -->
     <link
