--- a/emp.html
+++ b/emp.html
@@ -93,7 +93,7 @@
             >
               <div class="navbar-nav mr-auto py-0">
                 <a href="index.html" class="nav-item nav-link">Beranda</a>
-                <a href="index.html#about" class="nav-item nav-link"
+                <a href="index.html#informasi" class="nav-item nav-link"
                   >Informasi</a
                 >
               </div>
@@ -169,7 +169,8 @@
             <div class="col-lg-2 col-sm-6 mb-4">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title text-center py-2">${data[j].Label}</h5>
+                <h5 class="card-title text-center py-2">${data[j].Label} </h5>
+                <h5 class="card-title text-center py-2">${data[j].Fes} </h5>
                 <div class="text-center">
                   <a class="btn btn-primary text-center submit" href="${data[j].Link}">Lihat Rute</a>
                 </div>
