--- a/emp.html
+++ b/emp.html
@@ -169,8 +169,9 @@
             <div class="col-lg-2 col-sm-6 mb-4">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title text-center py-2">${data[j].Label} </h5>
-                <h5 class="card-title text-center py-2">${data[j].Fes} </h5>
+                <h5 class="card-title text-center">${data[j].Fes} </h5>
+                <h5 class=" text-center">menuju</h5>
+                <h5 class="card-title text-center">Titik ${data[j].Label} </h5>
                 <div class="text-center">
                   <a class="btn btn-primary text-center submit" href="${data[j].Link}">Lihat Rute</a>
                 </div>
